--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,7 @@ sqlalchemy==2.0.36
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-multipart==0.0.9
 python-dotenv==1.0.1
+pydantic[email]
